--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "sharp": "^0.32.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "uniqid": "^5.4.0"
   }
 }
